--- a/Edit-1/style.css
+++ b/Edit-1/style.css
@@ -19,6 +19,7 @@
 .home {
     color: aliceblue;
     font-size: 30px;
+    padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
     display: flex;
@@ -30,6 +31,7 @@
 }
 
 .title {
+    margin: auto;
     background-color: black;
     background-image: url('img-t1.png');
     background-repeat: none;
@@ -38,14 +40,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 2000px;
 }
 
 .title-1 {
-    padding: 100px;
-    padding-bottom: 1000px;
+    background-image: linear-gradient(90deg, rgba(25, 136, 247, 1) 0%, rgba(6, 93, 234, 0.83) 53%, rgba(114, 89, 217, 1) 100%);
+    color: aliceblue;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 90px;
+    margin-bottom: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .message {
