--- a/Edit-1/style.css
+++ b/Edit-1/style.css
@@ -23,10 +23,15 @@
     padding-right: 10px;
     display: flex;
     cursor: pointer;
+    transition: 70ms;
 }
 
 .home:hover {
-    color: rgb(121, 121, 121);
+    border-bottom: 7px solid #1f893a;
+}
+
+.home::after {
+    border-bottom: 20px solid #1f893a;
 }
 
 .title {
@@ -69,8 +74,8 @@
 }
 
 @keyframes ti {
-    33%{background-image: linear-gradient(90deg, rgba(24, 247, 191, 1) 0%, rgba(189, 217, 89, 1) 100%);}
-    66%{background-image: linear-gradient(90deg, rgba(247, 228, 24, 1) 0%, rgba(215, 105, 45, 1) 100%);}
+    40%{background-image: linear-gradient(90deg, rgba(24, 247, 191, 1) 0%, rgba(189, 217, 89, 1) 100%);}
+    70%{background-image: linear-gradient(90deg, rgba(247, 228, 24, 1) 0%, rgba(215, 105, 45, 1) 100%);}
     100%{background-image: linear-gradient(90deg, rgba(247, 24, 24, 1) 0%, rgba(232, 48, 183, 1) 100%);}
     
 }
