--- a/Edit-1/style.css
+++ b/Edit-1/style.css
@@ -15,6 +15,9 @@
     padding-right: 10px;
     padding-left: 10px;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+    z-index: +3;
 }
 
 .home {
@@ -33,6 +36,21 @@
     border-bottom: 7px solid #1f893a;
 }
 
+.rong {
+    margin: auto;
+    background-color: rgb(255, 255, 255);
+    background-image: url('img-t1.png');
+    background-repeat: no-repeat;
+    background-size: 2000px;
+    background-position: top;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 2000px;
+    position: relative;
+    z-index: -1;
+}
+
 .title {
     margin: auto;
     background-color: rgb(255, 255, 255);
@@ -44,6 +62,8 @@
     justify-content: center;
     align-items: center;
     max-width: 2000px;
+    position: relative;
+
 }
 
 .title-1 {
@@ -59,7 +79,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 3rem;
     transition: 2s;
 }
 
@@ -69,14 +89,35 @@
     animation-duration: 9s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    animation-delay: 2.5s;
     transform: translate(0px, -30px);
 }
 
 @keyframes ti {
-    40%{background-image: linear-gradient(90deg, rgba(24, 247, 191, 1) 0%, rgba(189, 217, 89, 1) 100%);}
-    70%{background-image: linear-gradient(90deg, rgba(247, 228, 24, 1) 0%, rgba(215, 105, 45, 1) 100%);}
+    0%{background-image: linear-gradient(90deg, rgba(24, 247, 191, 1) 0%, rgba(189, 217, 89, 1) 100%);}
+    50%{background-image: linear-gradient(90deg, rgba(247, 228, 24, 1) 0%, rgba(215, 105, 45, 1) 100%);}
     100%{background-image: linear-gradient(90deg, rgba(247, 24, 24, 1) 0%, rgba(232, 48, 183, 1) 100%);}
-    
+}
+
+.title-2 {
+    padding: 10px;
+    width: 900px;
+    font-size: 23px;
+    display: flex;
+    position: absolute;
+    top: 600px;
+    left: 50%,-50%;
+    background-color: aliceblue;
+    border-radius: 10px;
+    border: #1525b6 solid 4px;
+    animation-name: t2;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes t2 {
+    0%{border: #672eeb solid 4px;}
+    100%{border: #940cbd solid 4px;}
 }
 
 .message {
@@ -137,5 +178,6 @@
     padding-right: 15px;
     padding-left: 15px;
     padding-bottom: 9px;
+    font-size: 18px;
 }
 
