--- a/Edit-1/style.css
+++ b/Edit-1/style.css
@@ -1,15 +1,17 @@
 *{
     margin: 0px;
-    padding: 0px;  
+    padding: 0px; 
+    scroll-behavior: smooth;
 }
 
 .boby {
     background-color: #729092;
 } 
 
+
 .menu {
     background-color: #73A9AD;
-    height: 60px;
+    height: 50px;
     display: flex;
     align-items: flex;
     padding-right: 10px;
@@ -20,15 +22,24 @@
     z-index: +3;
 }
 
+#start {
+    position: absolute;
+    top: 0px;
+    width: 5px;
+    height: 5px;
+    background-color: red;
+}
+
 .home {
     color: aliceblue;
     font-size: 30px;
-    padding-top: 10px;
+    padding-top: 7px;
     padding-left: 10px;
     padding-right: 10px;
-    display: flex;
     cursor: pointer;
+    display: flex;
     transition-duration:70ms;
+    text-decoration: none;
 }
 
 .home:hover {
